fix place name on schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -35,7 +35,7 @@
             </nav>        
             <div id="header-callout">
                 <div class="page-container">
-                    <span>Feb.&nbsp;8  &bull; <i class="hide-narrow"><a href="https://goo.gl/maps/AvYSqhRTMs4C14nR8">Temple&nbsp;University</a>,&nbsp;</i>Philadelphia</span>
+                    <span>Feb.&nbsp;8  &bull; <i class="hide-narrow"><a href="https://goo.gl/maps/AvYSqhRTMs4C14nR8">Temple&nbsp;Student&nbsp;Center</a>,&nbsp;</i>Philadelphia</span>
                 </div>
             </div>
         </header>
