--- a/schedule/index.html
+++ b/schedule/index.html
@@ -54,6 +54,9 @@
             <h3><span>Saturday 10:30 AM</span></h3>
             <div id="saturday-am-1" class="page-block"><div class="open-block">OPEN</div></div>
 
+            <h3><span>Saturday 11:30 AM</span></h3>
+            <div id="saturday-am-break" class="page-block"><div class="open-block">OPEN</div></div>
+
             <h3><span>Saturday 12 PM</span></h3>
             <div id="saturday-am-2" class="page-block"><div class="open-block">OPEN</div></div>
 
@@ -62,6 +65,9 @@
 
             <h3><span>Saturday 2:30 PM</span></h3>
             <div id="saturday-pm-1" class="page-block"><div class="open-block">OPEN</div></div>
+
+            <h3><span>Saturday 3:30 PM</span></h3>
+            <div id="saturday-pm-break" class="page-block"><div class="open-block">OPEN</div></div>
 
             <h3><span>Saturday 4 PM</span></h3>
             <div id="saturday-pm-2" class="page-block"><div class="open-block">OPEN</div></div>
