add schedule and attendee links to top nav

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -29,7 +29,7 @@
                     <a href="/" id="corner-logo"><img src="img/srccon_product_logo_240.png"></a>
                     <ul class="site-nav-links">
                         <li><a href="/">About</a></li>
-                        <li><a href="/schedule">Schedule</a></li>
+                        <li><a href="/attendees">Attendees</a></li>
                     </ul>
                 </div>
             </nav>        
