fix etherpad link in schedule

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -119,7 +119,7 @@
                         </p>
                         <% } %>
                         <% if (session.transcription) { %><p><i class="fa fa-cc"></i> <strong><a href="<%= session.transcription %>">Live transcript of this session</a></strong></p><% } %>
-                        <% if (session.notepad) { %><p><i class="fa fa-file-text-o"></i> <strong><a href="https://etherpad.opennews.org/p/SRCCONLEAD2019-<%= session.id %>">Session notes & resources</a></strong></p><% } %>
+                        <% if (session.notepad) { %><p><i class="fa fa-file-text-o"></i> <strong><a href="https://etherpad.opennews.org/p/SRCCONPRODUCT2020-<%= session.id %>">Session notes & resources</a></strong></p><% } %>
                         <% if (session.description) { %><%= marked(session.description) %><% } %>
                     </div>
                 </article>
